# opencv-samples

images/: CMakeLists.txt  CustomHeader.h  CustomOpenCV.cpp  CustomOpenCV.h  Demo.cpp  SobelDemo.cpp
images/sampling-build/: CMakeCache.txt  Makefile  cmake_install.cmake  sampling  sampling.cbp
lib.env.cmake/: env.cmake  opencv.cmake
